# The-Gelsoft-Bomb-Project

./: README.md
Arduino Sketches/: .gitignore
Arduino Sketches/beeper_prototype/: beeper_prototype.ino
Arduino Sketches/case_controller/: .gitignore  CMakeLists.txt  Makefile  api.c  case_controller.c  max7219.c  max7219.h  serial.md  spi.c  spi.h
Arduino Sketches/interrupt_test/: interrupt_test.ino
Arduino Sketches/module_keypad/: .gitignore  CMakeLists.txt  Makefile  lcd.c  lcd.h  module.c  portpin.h  randomvals.h
KiCad stuff/: .gitignore
KiCad stuff/The Bomb Project/: The Bomb Project-cache.lib  The Bomb Project.kicad_pcb  The Bomb Project.kicad_pcb-bak  The Bomb Project.net  The Bomb Project.pro  The Bomb Project.sch  The Bomb Project.sch-bak  The Gelsoft Bomb Project.lib  fp-info-cache
KiCad stuff/The Bomb Project/The Gelsoft Bomb Project.pretty/: SOP-28_7.5x15.4mm_P1.27mm.kicad_mod
KiCad stuff/The Gelsoft Bomb Project/: Buck Converter.sch  Case Controller Stripboard.kicad_pcb  Case Controller Stripboard.sch  Case Controller.kicad_pcb  Case Controller.net  Case Controller.pro  Case Controller.sch  Module - Keypad-cache.lib  Module - Keypad.kicad_pcb  Module - Keypad.net  Module - Keypad.pro  Module - Keypad.sch  Module - Keypad.sch-bak  Module - Keypad.xml  The Gelsoft Bomb Project.dcm  The Gelsoft Bomb Project.lib  fp-info-cache  fp-lib-table  sym-lib-table
KiCad stuff/The Gelsoft Bomb Project/The Gelsoft Bomb Project.pretty/: Buck_Converter_Module_7-24v.kicad_mod  HDSP-B08G.kicad_mod  LED_Square_15x15mm.kicad_mod  SK12D07VG3.kicad_mod
